# workshop_regex_pdf

./: .env-example  README.md  anotacoes_aula.txt  debug_aws.py  pyproject.toml
src/: __init__.py  pdf_viz.py
src/configs/tools/: queue.py
src/configs/tools/aws/: sqs.py
